[gd_scene load_steps=4 format=3 uid="uid://bwe38ssxqii1y"]

[ext_resource type="Script" path="res://src/ui/settings_menu/SettingsMenu.gd" id="1_c658r"]
[ext_resource type="Script" path="res://src/ui/default_button/DefaultButton.gd" id="2_cqrt1"]
[ext_resource type="Theme" uid="uid://gns8b3cfwrab" path="res://src/ui/themes/default_theme.tres" id="3_k6pq7"]

[node name="SettingsMenu" type="Node2D"]
script = ExtResource("1_c658r")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 544.0
offset_right = 672.0
offset_bottom = 608.0
text = "Main Menu"
script = ExtResource("2_cqrt1")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 256.0
offset_top = 64.0
offset_right = 896.0
offset_bottom = 448.0
mouse_filter = 1
theme = ExtResource("3_k6pq7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="FullscreenToggle" type="CheckButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"
script = ExtResource("2_cqrt1")

[node name="MainVolumeSliderLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Volume"

[node name="MasterVolSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="MusicVolumeSliderLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="SoundEffectVolumeSliderLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sfx Volume"

[node name="SoundEffectVolSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
